Fix JWTUtils