@@ -5,11 +5,13 @@ import io.jsonwebtoken.Jws;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
 import org.springframework.util.ResourceUtils;
 import org.springframework.util.StringUtils;
 
 import java.io.File;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.security.Key;
 import java.security.KeyFactory;
@@ -34,24 +36,32 @@ public class JWTUtils {
     public JWTUtils(@Value("${sso.server.jwt.key-path:}") String keyPath) throws Exception {
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
 
-        String publicKeyPath = "classpath:keystore/public.key";
-        String privateKeyPath = "classpath:keystore/private.key";
+        String publicKeyPath = "keystore/public.key";
+        String privateKeyPath = "keystore/private.key";
+        byte[] publicKeyBytes;
+        byte[] privateKeyBytes;
         if (StringUtils.hasText(keyPath)) {
-            if (keyPath.endsWith("/")) {
-                keyPath = keyPath.substring(0, keyPath.lastIndexOf("/"));
-            }
             publicKeyPath = keyPath + "/public.key";
             privateKeyPath = keyPath + "/private.key";
-        }
 
-        File publicKeyFile = ResourceUtils.getFile(publicKeyPath);
-        byte[] publicKeyBytes = Files.readAllBytes(publicKeyFile.toPath());
+            File publicKeyFile = ResourceUtils.getFile(publicKeyPath);
+            publicKeyBytes = Files.readAllBytes(publicKeyFile.toPath());
+
+            File privateKeyFile = ResourceUtils.getFile(privateKeyPath);
+            privateKeyBytes = Files.readAllBytes(privateKeyFile.toPath());
+        } else {
+            InputStream publicKeyStream = new ClassPathResource(publicKeyPath).getInputStream();
+            try (publicKeyStream) {
+                publicKeyBytes = publicKeyStream.readAllBytes();
+            }
+            InputStream privateKeyStream = new ClassPathResource(privateKeyPath).getInputStream();
+            try (privateKeyStream) {
+                privateKeyBytes = privateKeyStream.readAllBytes();
+            }
+        }
 
         EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(publicKeyBytes);
         this.publicKey = keyFactory.generatePublic(publicKeySpec);
-
-        File privateKeyFile = ResourceUtils.getFile(privateKeyPath);
-        byte[] privateKeyBytes = Files.readAllBytes(privateKeyFile.toPath());
 
         EncodedKeySpec privateKeySpec = new PKCS8EncodedKeySpec(privateKeyBytes);
         this.privateKey = keyFactory.generatePrivate(privateKeySpec);
